2011-08-25  Marco Randazzo    <marco.randazzo@iit.it>
	
	* src/libYARP_dev/include/yarp/dev/ControlBoardInterfaces.h
	* src/libYARP_dev/include/yarp/dev/ControlBoardInterfacesImpl.h
	* src/libYARP_dev/src/ControlBoardInterfacesImpl.cpp
	* src/libYARP_dev/src/RemoteControlBoard.cpp
	* conf/YarpVersion.cmake
	Added method: getCurrentImpedanceLimit() to ImpedanceControl interface
	YARP_VERSION_PATCH now is 11

2011-08-22  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Port.cpp: add support for YARP_PORT_PREFIX.
	If this environment variable is defined, it is added as a prefix
	to port names by Port::open. [thanks Lorenzo Natale] 
	[thanks Ali Paikan]

2011-08-19  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpVersion.cmake: version bump to 2.3.10 to incorporate
	Lorenzo's Dll fixes

2011-08-19  Lorenzo Natale <lorenzo.natale@iit.it>

    * src/libYARP_dev/include/yarp/dev/ControlBoardInterfaces.h
    * src/libYARP_dev/include/yarp/dev/ControlBoardInterfacesImpl.h
	Windows: fixed Dll export issues to cope with recent changes to the iCub simulator.
	
2011-08-18  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpVersion.cmake: version bump to 2.3.9

2011-08-03  Marco Randazzo    <marco.randazzo@iit.it>

	* src/libYARP_dev/src/ServerControlBoard.cpp
	fixed issue with the iCub simulator (VOCAB_CM_CONTROL_MODE).
	
2011-07-28  Daniel Krieg  <krieg@fias.uni-frankfurt.de>

    * src/carriers/mpi_carrier: fixed remaining problems
    with reconnect on MPI bcast carrier;
    slight cleanup and code reorganization

2011-07-27  Daniel Krieg  <krieg@fias.uni-frankfurt.de>

    * src/carriers/mpi_carrier/src/MpiStream.cpp: fixed problems
    with disconnect on MPI bcast carrier


2011-07-27  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/yarp.i: commit C# fix from Stephane Lallee; SWIG
	doesn't translate VOCAB4 correctly in C# [thanks Stephane Lallee]

2011-07-26  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
